small ssh hardening

--- a/.tobury/config/ssh.conf
+++ b/.tobury/config/ssh.conf
@@ -3,8 +3,8 @@
 # What ports, IPs and protocols we listen for
 Port 22
 Protocol 2
-HostKey /etc/ssh/ssh_host_rsa_key
-HostKey /etc/ssh/ssh_host_dsa_key
+#HostKey /etc/ssh/ssh_host_rsa_key
+#HostKey /etc/ssh/ssh_host_dsa_key
 HostKey /etc/ssh/ssh_host_ecdsa_key
 HostKey /etc/ssh/ssh_host_ed25519_key
 #Privilege Separation is turned on for security
@@ -12,7 +12,7 @@ UsePrivilegeSeparation yes
 
 # Lifetime and size of ephemeral version 1 server key
 KeyRegenerationInterval 3600
-ServerKeyBits 1024
+ServerKeyBits 4096
 
 # Logging
 SyslogFacility AUTH
