--- a/.tobury/config/ssh.conf
+++ b/.tobury/config/ssh.conf
@@ -1,59 +1,57 @@
 # Package generated configuration file edited for ToBury
 
-# What ports, IPs and protocols we listen for
 Port 22
 Protocol 2
-#HostKey /etc/ssh/ssh_host_rsa_key
-#HostKey /etc/ssh/ssh_host_dsa_key
+
+# We remove the keys based on prime factorisation 
+# this is due to Shor's Algorithm and some other 
+# more classical attack that could come in years to 
+# come. Although the user base may be ephemeral if 
+# trust is implemented it will be useful to have keys
+# that are stronger
+
+# HostKey /etc/ssh/ssh_host_rsa_key
+# HostKey /etc/ssh/ssh_host_dsa_key
 HostKey /etc/ssh/ssh_host_ecdsa_key
 HostKey /etc/ssh/ssh_host_ed25519_key
-#Privilege Separation is turned on for security
+
 UsePrivilegeSeparation yes
 
-# Lifetime and size of ephemeral version 1 server key
 KeyRegenerationInterval 3600
+
+# Key size is increased, security over performance 
 ServerKeyBits 4096
 
 # Logging
 SyslogFacility AUTH
 LogLevel INFO
 
-# Authentication:
+# Root login is disabled and only keys are allowed 
 LoginGraceTime 120
 PermitRootLogin no
 StrictModes yes
-
 RSAAuthentication yes
 PubkeyAuthentication yes
-
-# Don't read the user's ~/.rhosts and ~/.shosts files
-IgnoreRhosts yes
-# For this to work you will also need host keys in /etc/ssh_known_hosts
-RhostsRSAAuthentication no
-# similar for protocol version 2
-HostbasedAuthentication no
-# Uncomment if you don't trust ~/.ssh/known_hosts for RhostsRSAAuthentication
-#IgnoreUserKnownHosts yes
-
-# To enable empty passwords, change to yes (NOT RECOMMENDED)
 PermitEmptyPasswords no
-
-# Change to yes to enable challenge-response passwords (beware issues with
-# some PAM modules and threads)
-ChallengeResponseAuthentication no
-
-# Change to no to disable tunnelled clear text passwords
 PasswordAuthentication no
 
+IgnoreRhosts yes
+RhostsRSAAuthentication no
+HostbasedAuthentication no
+#IgnoreUserKnownHosts yes
+
+# XForwarding is left on as this is a useful service 
+# that although slow over Tor with 6 hops, can provide
+# some service to those who do not like the CLI interface
+# and for programs that do not have web interfaces
 X11Forwarding yes
 X11DisplayOffset 10
 PrintMotd no
 PrintLastLog yes
 TCPKeepAlive yes
 
-# Allow client to pass locale environment variables
 AcceptEnv LANG LC_*
-
 Subsystem sftp /usr/lib/openssh/sftp-server
 
+ChallengeResponseAuthentication no
 UsePAM yes
